--- a/popup.html
+++ b/popup.html
@@ -124,6 +124,21 @@
     }
     .delete-btn:hover { background: #fee2e2; color: var(--danger); }
 
+    .copy-btn {
+      flex: 0 0 auto;
+      margin-left: 8px;
+      padding: 4px 8px;
+      border-radius: 6px;
+      border: 1px solid var(--border);
+      background: var(--bg);
+      color: var(--text);
+      font-size: 12px;
+      line-height: 1.2;
+      cursor: pointer;
+      align-self: flex-start;
+    }
+    .copy-btn:hover { background: #eef2ff; border-color: #c7d2fe; }
+
     .actions { 
       position: sticky;
       bottom: 0;
