--- a/popup.html
+++ b/popup.html
@@ -234,6 +234,111 @@
       box-shadow: 0 4px 15px rgba(0,0,0,0.15); 
       border: 4px solid white;
     }
+
+    /* 自定义弹窗样式 */
+    .modal-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2000;
+    }
+    .modal-content {
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      width: 260px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+      text-align: center;
+    }
+    #modalMessage {
+      margin-bottom: 20px;
+      font-size: 14px;
+      color: var(--text);
+      line-height: 1.5;
+      word-break: break-all;
+    }
+    .modal-actions {
+      display: flex;
+      gap: 8px;
+      justify-content: center;
+    }
+    .modal-actions button {
+      flex: 1;
+      padding: 8px;
+      font-size: 13px;
+    }
+    #modalCancel {
+      background: #f1f5f9;
+      color: var(--text);
+      border: 1px solid var(--border);
+    }
+    #modalConfirm {
+      background: var(--primary);
+      color: white;
+      border: none;
+    }
+
+    /* 暂存列表弹窗样式 */
+    .stashed-modal-content {
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      width: 90%;
+      max-width: 400px;
+      max-height: 80vh;
+      display: flex;
+      flex-direction: column;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+    }
+    .stashed-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 16px;
+      padding-bottom: 12px;
+      border-bottom: 1px solid var(--border);
+    }
+    .stashed-header h4 { margin: 0; font-size: 16px; }
+    #stashedList {
+      flex: 1;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      padding-right: 4px;
+    }
+    .stashed-item {
+      padding: 10px;
+      background: #f8fafc;
+      border-radius: 6px;
+      border: 1px solid var(--border);
+      font-size: 13px;
+      position: relative;
+    }
+    .stashed-item-text { margin-bottom: 4px; word-break: break-all; }
+    .stashed-item-info { font-size: 11px; color: var(--text-light); }
+    .stashed-item-del {
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      cursor: pointer;
+      color: var(--text-light);
+      font-size: 14px;
+    }
+    .stashed-item-del:hover { color: var(--danger); }
+    .stashed-footer {
+      margin-top: 16px;
+      padding-top: 12px;
+      border-top: 1px solid var(--border);
+      display: flex;
+      gap: 8px;
+    }
   </style>
 </head>
 <body>
@@ -253,7 +358,35 @@
     <div id="react-stack-root" style="height: 600px; position: relative; margin-top: 10px; overflow: hidden;"></div>
   </div>
 
+  <!-- 自定义弹窗结构 -->
+  <div id="customModal" class="modal-overlay" style="display: none;">
+    <div class="modal-content">
+      <div id="modalMessage"></div>
+      <div class="modal-actions">
+        <button id="modalCancel">取消</button>
+        <button id="modalConfirm">确定</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- 暂存列表弹窗结构 -->
+  <div id="stashedModal" class="modal-overlay" style="display: none;">
+    <div class="stashed-modal-content">
+      <div class="stashed-header">
+        <h4>已暂存的勾选项</h4>
+        <div id="closeStashed" style="cursor: pointer; font-size: 20px;">&times;</div>
+      </div>
+      <div id="stashedList"></div>
+      <div class="stashed-footer">
+        <button id="clearStashed">清空暂存</button>
+        <button id="closeStashedBtn" style="background: var(--primary); color: white; border: none;">关闭</button>
+      </div>
+    </div>
+  </div>
+
   <div class="actions">
+    <button id="collectChecked">收集勾选项</button>
+    <button id="viewStashed">查看暂存</button>
     <button id="exportMd">导出 Markdown</button>
     <button id="clearAll">清空全部</button>
   </div>
